tdf#152931 deref of moPenColor std::optional on launching writer

Change-Id: I13cb7aade5b4a0142e23bd62e62d2160c73d8740
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145180
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>